Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5243

lfs.c:1119: undefined reference to `libcfs_log_goto'

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.7.0
    • Lustre 2.6.0
    • 3
    • 14623

      [06:59:13] Alex Zhuravlev: refreshed the local tree (since few days back) and now getting this again:
      lfs.c:1119: undefined reference to `libcfs_log_goto'
      [08:12:03] Alex Zhuravlev: hmm, this is introduced with LU-4587 utils: remove llapi_ping_target()
      [08:19:51] Alex Zhuravlev: -lfs_LDADD := liblustreapi.a $(LIBCFSUTIL) $(LIBREADLINE)
      +lfs_LDADD := liblustreapi.a $(LIBCFSUTIL) $(LIBPTLCTL) $(LIBREADLINE)
      [08:19:51] Alex Zhuravlev: John?

            bzzz Alex Zhuravlev
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: